Add Create waiting room functionality

--- a/teacher-home-page-view.html
+++ b/teacher-home-page-view.html
@@ -66,6 +66,9 @@
 
             <input type="number" placeholder="Въведи средна продължителност на среща" name="avg-duration" required>
 
+            <label for="date"> Дата на среща </label>
+            <input id="date" name="date" type="date" required>
+
             <label for="start-hour"> Начало на среща </label>
             <input id="start-hour" name="start-hour" type="time" onchange="updateEndHourOptions()" step="600" required>
 
