Some UI/UX improvement

--- a/registration_1.html
+++ b/registration_1.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta content="width=device-width, initial-scale=1" name="viewport" />
+
 
         <link rel="stylesheet" href="css/registration.css">
         <script src='script/check_session.js'></script>
@@ -26,7 +28,7 @@
             <h1>Настройки на акаунта</h1><br>
             <form id="image-upload">
                 <span id="main-error" class="Err"></span> <br>
-                <section class='horizontal'>
+                <section class='horizontal' id="main-information">
                     <input type="text" name="firstName" placeholder="Име*">
                     <input type="text" name="lastName" placeholder="Фамилия*">
                     <input type="text" name="facultyNumber" placeholder="Факултетен номер*"><br>
