--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta content="width=device-width, initial-scale=1" name="viewport" />
+
         <title>Waiting Room Sign in</title>
 
         <link rel="stylesheet" type="text/css" href="css/index.css" />
