Add small refactor

--- a/teacher-home-page.html
+++ b/teacher-home-page.html
@@ -6,36 +6,11 @@
 
     <link rel="stylesheet" href="css/user-style.css">
     <link rel="stylesheet" href="css/popup-form-style.css">
+    <link rel="stylesheet" href="css/teacher-style.css">
+
     <script defer src='script/check_session.js'></script>
     <script defer src="script/teacher_home_page.js"> </script>
     <script defer src="script/update_username.js"></script>
-
-
-
-    <style>
-
-        /* TODO think about exporting to external .css file */
-
-        .header {
-            margin-left: 10%;
-        }
-
-        input, select {
-            display: block;
-            width: 90%;
-            margin: 10px auto;
-        }
-
-        .room-info {
-            text-align: center;
-        }
-
-        /* .input-hour {
-            display: inline;
-            width: 45%;
-        } */
-
-    </style>
 
 </head>
 
