Fix some UI and make auto-refresh on student-home-page

--- a/student-home-page.html
+++ b/student-home-page.html
@@ -18,9 +18,11 @@
     <body>
 
         <header class="header">
-            <p class="welcome-message"> 
+            <section class="welcome-message"> 
                 Добре дошъл, <br>
-                <span id="user-name" class="name" class="user-info-text">user looser</span> </p>
+                <span id="user-name" class="name" class="user-info-text">user looser</span> 
+                <span id='logout'>Изход</span>
+            </section>
     
                 <img src="img/sofia-uni-logo.jpg">
     
