--- a/teacher-home-page.html
+++ b/teacher-home-page.html
@@ -19,9 +19,11 @@
     <header class="header">
         <img src="img/sofia-uni-logo.jpg">
 
-        <pre class="welcome-message"> 
-            Добре дошъл, 
-            <span id="user-name" class="name">Професор Професоров</span> </pre>
+        <section class="welcome-message"> 
+            Добре дошъл, <br>
+            <span id="user-name" class="name">Професор Професоров</span>
+            <span id='logout'> Изход</span> 
+        </section>
     </header>
 
     <section class="main-content">
