--- a/teacher-home-page.html
+++ b/teacher-home-page.html
@@ -1,41 +1,41 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="bg">
+    <head>
 
-    <meta charset="UTF-8">
+        <meta charset="UTF-8">
 
-    <link rel="stylesheet" href="css/user-style.css">
-    <link rel="stylesheet" href="css/popup-form-style.css">
-    <link rel="stylesheet" href="css/teacher-style.css">
+        <link rel="stylesheet" href="css/user-style.css">
+        <link rel="stylesheet" href="css/popup-form-style.css">
+        <link rel="stylesheet" href="css/teacher-style.css">
 
-    <script defer src='script/check_session.js'></script>
-    <script defer src="script/teacher_home_page.js"> </script>
-    <script defer src="script/update_username.js"></script>
+        <script defer src='script/check_session.js'></script>
+        <script defer src="script/teacher_home_page.js"> </script>
+        <script defer src="script/update_username.js"></script>
 
-</head>
+    </head>
 
-<body>
+    <body>
 
-    <header class="header">
-        <img src="img/sofia-uni-logo.jpg">
+        <header class="header">
+            <img src="img/sofia-uni-logo.jpg">
 
-        <section class="welcome-message"> 
-            Добре дошъл, <br>
-            <span id="user-name" class="name">Професор Професоров</span>
-            <span id='logout'> Изход</span> 
+            <section class="welcome-message"> 
+                Добре дошъл, <br>
+                <span id="user-name" class="name">Професор Професоров</span>
+                <span id='logout'> Изход</span> 
+            </section>
+        </header>
+
+        <section class="main-content">
+            <h3> Активни стаи: </h3>
+            <div id="rooms-container" class="rooms-container">
+                <!-- <div class="room">
+                    <p class="meet-title"> Math </p>
+                    <p class="meet-start-end-hour"> 1-5 </p>
+                </div> -->
+                <!--<div id="add-room-button" class="room" onclick="openForm(0)"> <p>+</p> </div> -->
+            </div>
         </section>
-    </header>
-
-    <section class="main-content">
-        <h3> Активни стаи: </h3>
-        <div id="rooms-container" class="rooms-container">
-            <!-- <div class="room">
-                <p class="meet-title"> Math </p>
-                <p class="meet-start-end-hour"> 1-5 </p>
-            </div> -->
-             <!--<div id="add-room-button" class="room" onclick="openForm(0)"> <p>+</p> </div> -->
-        </div>
-    </section>
         <form onsubmit="return false;" id="create-exam-form"  class="form-popup">
             <h1>Създаване на стая</h1>
 
@@ -68,4 +68,5 @@
         </form>
 
     </body>
+
 </html>
