Add removing of expired waiting rooms

--- a/student-home-page.html
+++ b/student-home-page.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="css/popup-form-style.css">
 
         <script defer src='script/check_session.js'></script>
+        <script defer src='script/remove_expired_rooms.js'></script>
         <script defer src='script/update_username.js'></script>
         <script defer src='script/student_forms_activity.js'></script>
         <script defer src="script/student_home_page.js"></script>
