--- a/waiting-room-view.html
+++ b/waiting-room-view.html
@@ -47,7 +47,7 @@
             <main id="room-information" class="room-information">
 
                 <section id='current-student-details'>
-                    <p class='section-title'> Current student name </p>
+                    <p id='current-student-name' class='section-title'> Current student name </p>
 
                     <div id='timer-circle'>
                         <p id='timer-title'> Оставащо време: </p>
