--- a/teacher-home-page.html
+++ b/teacher-home-page.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="css/teacher-style.css">
 
         <script defer src='script/check_session.js'></script>
+        <script defer src='script/remove_expired_rooms.js'></script>
         <script defer src="script/teacher_home_page.js"> </script>
         <script defer src="script/update_username.js"></script>
 
