Refactor + Now clock disappear when exam has started

--- a/waiting-room-view.html
+++ b/waiting-room-view.html
@@ -14,7 +14,7 @@
 
         <style>
 
-            #current-student-details {
+            #waiting-room-current-state {
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
@@ -46,8 +46,9 @@
 
             <main id="room-information" class="room-information">
 
-                <section id='current-student-details'>
-                    <p id='current-student-name' class='section-title'> Current student name </p>
+                <section id='waiting-room-current-state'>
+                    <!-- <p id='current-student-name' class='section-title'> Current student name </p> -->
+                    <!-- <img src="..."> -->
 
                     <div id='timer-circle'>
                         <p id='timer-title'> Оставащо време: </p>
