First message is sent through socket!

--- a/student-home-page.html
+++ b/student-home-page.html
@@ -13,6 +13,7 @@
         <script defer src='script/update_username.js'></script>
         <script defer src='script/student_forms_activity.js'></script>
         <script defer src="script/student_home_page.js"></script>
+        <script defer src='script/accept_invite.js'></script>
 
     </head>
 
