--- a/student-room.html
+++ b/student-room.html
@@ -10,6 +10,7 @@
         <script defer src='script/check_session.js'></script>
         <script defer src='script/update_username.js'></script>
         <script defer src='script/student_room.js'></script>
+        <script defer src='script/accept_invite.js'></script>
 
     </head>
 
