--- a/waiting-room-view.html
+++ b/waiting-room-view.html
@@ -11,6 +11,7 @@
         <script defer src='script/check_session.js'></script>
         <script defer src='script/update_username.js'></script>
         <script defer src='script/waiting-room-view.js'></script>
+        <script defer src='script/invite_student.js'></script>
 
     </head>
 
@@ -35,7 +36,7 @@
 
                 <section id='waiting-room-current-state'>
                     <p class='current-student-info section-title'> Име на студент </p>
-                    <img class='current-student-info' src="...">
+                    <!-- <img class='current-student-info' src="..."> -->
 
                     <button id='welcome-student-button'> Покани студент </button>
 
