--- a/student-room.html
+++ b/student-room.html
@@ -6,6 +6,7 @@
         <title>User home page</title>
 
         <link rel="stylesheet" href="css/user-style.css">
+        <link rel="stylesheet" href="css/popup-form-style.css">
 
         <script defer src='script/check_session.js'></script>
         <script defer src='script/update_username.js'></script>
@@ -54,6 +55,21 @@
                     </div>
                 </section>
             </main>
+
+            <div id="invitation-pop-up" class="form-popup">
+                <h1>Записване за среща</h1>
+
+                <input id ="room-id" type="hidden" name='id'>
+
+                <select id="meet-type" name="meet_type" class='dropdown-meet-type'>
+                    <option>Изпит</option>
+                    <option>Консултация за проект</option>
+                    <option>Нанасяне на оценка</option>
+                </select>
+
+                <button type="submit" class="btn" id="submit-record">Запис</button>
+                <button type="button" class="btn cancel" onclick="closeForm()">Затвори</button>
+            </div>
             
         </section>
 
