Now when Student accept invitation then he is removed from meet_record table. (TODO redirect teacher and student to link if online AND Rename the invitation pop up buttons)

--- a/waiting-room-view.html
+++ b/waiting-room-view.html
@@ -35,8 +35,11 @@
             <main id="room-information" class="room-information">
 
                 <section id='waiting-room-current-state'>
-                    <p class='current-student-info section-title'> Име на студент </p>
-                    <!-- <img class='current-student-info' src="..."> -->
+
+                    <!-- <div id="current-student" class="queue-element">
+                        <img id='current-student-image' class='user-image' src='storage/Screenshot (12).png'>
+                        <p id='current-student-name' class='current-student-info name'> Име на студент </p>
+                    </div> -->
 
                     <button id='welcome-student-button'> Покани студент </button>
 
