--- a/student-room.html
+++ b/student-room.html
@@ -59,6 +59,8 @@
             <div id="invitation-pop-up" class="form-popup">
                 <h1>Покана от преподавател</h1>
 
+                <p id="invitation-meet-info"> </p>
+
                 <div id='invitation-timer-circle'>
                     <p id='invitation-timer-title'>Оставащо време:</p>
                     <p id='invitation-timer'>00:00</p>
