Add fully functional updating of room queue

--- a/student-home-page.html
+++ b/student-home-page.html
@@ -53,15 +53,15 @@
             <div id="invitation-pop-up" class="form-popup">
                 <h1>Покана от преподавател</h1>
 
-                <p id="invitation-meet-info"> </p>
-
                 <div id='invitation-timer-circle'>
                     <p id='invitation-timer-title'>Оставащо време:</p>
                     <p id='invitation-timer'>00:00</p>
                 </div>
 
-                <button id="accept-invitation-btn" type="submit" class="btn">Запис</button>
-                <button id="dismiss-invitation-btn" type="button" class="btn cancel">Затвори</button>
+                <p id="invitation-meet-info" class="center"> </p>
+
+                <button id="accept-invitation-btn" type="submit" class="btn">Приеми</button>
+                <button id="dismiss-invitation-btn" type="button" class="btn cancel">Откажи</button>
             </div>
 
         </section>
