--- a/student-room.html
+++ b/student-room.html
@@ -12,6 +12,7 @@
         <script defer src='script/update_username.js'></script>
         <script defer src='script/student_room.js'></script>
         <script defer src='script/accept_invite.js'></script>
+        <script defer src='script/update_students_start_time.js'></script>
 
     </head>
 
@@ -59,15 +60,15 @@
             <div id="invitation-pop-up" class="form-popup">
                 <h1>Покана от преподавател</h1>
 
-                <p id="invitation-meet-info"> </p>
-
                 <div id='invitation-timer-circle'>
                     <p id='invitation-timer-title'>Оставащо време:</p>
                     <p id='invitation-timer'>00:00</p>
                 </div>
 
+                <p id="invitation-meet-info" class="center"> </p>
+
                 <button id="accept-invitation-btn" type="submit" class="btn">Приеми</button>
-                <button id="dismiss-invitation-btn" type="button" class="btn cancel">Затвори</button>
+                <button id="dismiss-invitation-btn" type="button" class="btn cancel">Откажи</button>
             </div>
             
         </section>
