--- a/teacher-home-page.html
+++ b/teacher-home-page.html
@@ -18,13 +18,15 @@
     <body>
 
         <header class="header">
-            <img src="img/sofia-uni-logo.jpg">
-
+            
             <section class="welcome-message"> 
                 Добре дошъл, <br>
                 <span id="user-name" class="name">Професор Професоров</span>
                 <span id='logout'> Изход</span> 
             </section>
+
+            <img id="su-logo" src="img/sofia-uni-logo.jpg">
+        
         </header>
 
         <section class="main-content">
